--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,18 @@
                 </configuration>
             </plugin>
 
+            <!-- Testing -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.5.2</version>
+                <configuration>
+                    <excludes>
+                        <exclude>**/StrangeTest.java</exclude>
+                    </excludes>
+                </configuration>
+            </plugin>
+
             <!-- JAR creation -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
