--- a/pom.xml
+++ b/pom.xml
@@ -41,11 +41,9 @@
             <version>5.8.2</version>
             <scope>test</scope>
         </dependency>
-
     </dependencies>
 
     <build>
-
         <resources>
             <resource>
                 <directory>${project.build.directory}/lib/</directory>
@@ -54,7 +52,6 @@
         </resources>
 
         <plugins>
-
             <!-- Coping dependencies -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -117,7 +114,7 @@
                         </manifest>
                         <manifestEntries>
                             <Rsrc-Main-Class>com.javarush.games.racer.RacerGame</Rsrc-Main-Class>
-
+                            <Class-Path>./</Class-Path>
                         </manifestEntries>
                     </archive>
                 </configuration>
